# enterprise-rag-quality-lab

./: .env.example  .gitignore  .mailmap  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  evaluation.md  production-readiness.md  security-and-governance.md  security-and-privacy.md
examples/: corpus.json  questions.json
scripts/: run_demo.py
src/rag_quality_lab/: __init__.py  chunking.py  evaluator.py  metrics.py  redaction.py  retrieval.py
tests/: test_chunking.py  test_metrics.py  test_redaction.py  test_retrieval.py
